tests/baselines/reference/exportSpecifierAndLocalMemberDeclaration.errors.txt
exportSpecifierAndLocalMemberDeclaration.ts(2,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
exportSpecifierAndLocalMemberDeclaration.ts(11,20): error TS2503: Cannot find namespace 'X'.


==== exportSpecifierAndLocalMemberDeclaration.ts (2 errors) ====
    declare module "m2" {
        module X {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            interface I { }
        }
        function Y();
        export { Y as X };
        function Z(): X.I;
    }
    
    declare module "m2" {
        function Z2(): X.I;
                       ~
!!! error TS2503: Cannot find namespace 'X'.
    }